server/antlr4_parser/powerfx_alpha/PowerFxAlphaParser.py
# Generated from PowerFxAlphaParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PowerFxAlphaParser ( Parser ):

    grammarFileName = "PowerFxAlphaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'&&'", "'||'", 
                     "'!'", "'='", "'<'", "'<='", "'>'", "'>='", "'<>'", 
                     "'in'", "'exactin'", "'.'", "';'", "','", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'@'", "':'", "'Parent'", 
                     "'Self'", "'ThisItem'", "'ThisRecord'", "'Import'", 
                     "'Define'", "'out'", "'true'", "'false'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'[@'" ]

    symbolicNames = [ "<INVALID>", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "PLUS", "MINUS", "MUL", "DIV", "POW", "MOD", "AND", 
                      "OR", "NOT", "EQ", "LT", "LTE", "GT", "GTE", "NEQ", 
                      "IN", "EXACTIN", "DOT", "SEMI", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "AT", "COLON", "PARENT", "SELF", "THISITEM", "THISRECORD", 
                      "IMPORT", "DEFINE", "OUT", "TRUE", "FALSE", "NUMBER", 
                      "STRING", "IDENTIFIER", "SINGLE_QUOTE_STRING", "OPEN_BRACKET_AT" ]

    RULE_expressionUnit = 0
    RULE_importStatement = 1
    RULE_functionDefinition = 2
    RULE_functionArguments = 3
    RULE_argument = 4
    RULE_functionBody = 5
    RULE_expressionElements = 6
    RULE_functionCall = 7
    RULE_functionIdentifier = 8
    RULE_literal = 9
    RULE_logicalLiteral = 10
    RULE_numberLiteral = 11
    RULE_textLiteral = 12
    RULE_expression = 13
    RULE_assignment = 14
    RULE_reference = 15
    RULE_baseReference = 16
    RULE_referenceOperator = 17
    RULE_referenceList = 18
    RULE_inlineRecord = 19
    RULE_inlineRecordList = 20
    RULE_inlineTable = 21
    RULE_inlineTableList = 22
    RULE_disambiguatedIdentifier = 23
    RULE_tableColumnIdentifier = 24
    RULE_globalIdentifier = 25
    RULE_contextKeyword = 26
    RULE_binaryOperator = 27
    RULE_prefixOperator = 28
    RULE_postfixOperator = 29

    ruleNames =  [ "expressionUnit", "importStatement", "functionDefinition", 
                   "functionArguments", "argument", "functionBody", "expressionElements", 
                   "functionCall", "functionIdentifier", "literal", "logicalLiteral", 
                   "numberLiteral", "textLiteral", "expression", "assignment", 
                   "reference", "baseReference", "referenceOperator", "referenceList", 
                   "inlineRecord", "inlineRecordList", "inlineTable", "inlineTableList", 
                   "disambiguatedIdentifier", "tableColumnIdentifier", "globalIdentifier", 
                   "contextKeyword", "binaryOperator", "prefixOperator", 
                   "postfixOperator" ]

    EOF = Token.EOF
    WS=1
    LINE_COMMENT=2
    BLOCK_COMMENT=3
    PLUS=4
    MINUS=5
    MUL=6
    DIV=7
    POW=8
    MOD=9
    AND=10
    OR=11
    NOT=12
    EQ=13
    LT=14
    LTE=15
    GT=16
    GTE=17
    NEQ=18
    IN=19
    EXACTIN=20
    DOT=21
    SEMI=22
    COMMA=23
    LPAREN=24
    RPAREN=25
    LBRACE=26
    RBRACE=27
    LBRACK=28
    RBRACK=29
    AT=30
    COLON=31
    PARENT=32
    SELF=33
    THISITEM=34
    THISRECORD=35
    IMPORT=36
    DEFINE=37
    OUT=38
    TRUE=39
    FALSE=40
    NUMBER=41
    STRING=42
    IDENTIFIER=43
    SINGLE_QUOTE_STRING=44
    OPEN_BRACKET_AT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExpressionUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxAlphaParser.ImportStatementContext)
            else:
                return self.getTypedRuleContext(PowerFxAlphaParser.ImportStatementContext,i)


        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxAlphaParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(PowerFxAlphaParser.FunctionDefinitionContext,i)


        def expressionElements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxAlphaParser.ExpressionElementsContext)
            else:
                return self.getTypedRuleContext(PowerFxAlphaParser.ExpressionElementsContext,i)


        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_expressionUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionUnit" ):
                listener.enterExpressionUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionUnit" ):
                listener.exitExpressionUnit(self)




    def expressionUnit(self):

        localctx = PowerFxAlphaParser.ExpressionUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expressionUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 52497402036224) != 0):
                self.state = 63
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [36]:
                    self.state = 60
                    self.importStatement()
                    pass
                elif token in [37]:
                    self.state = 61
                    self.functionDefinition()
                    pass
                elif token in [24, 32, 33, 34, 35, 39, 40, 41, 42, 43, 45]:
                    self.state = 62
                    self.expressionElements()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(PowerFxAlphaParser.IMPORT, 0)

        def STRING(self):
            return self.getToken(PowerFxAlphaParser.STRING, 0)

        def SEMI(self):
            return self.getToken(PowerFxAlphaParser.SEMI, 0)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)




    def importStatement(self):

        localctx = PowerFxAlphaParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(PowerFxAlphaParser.IMPORT)
            self.state = 69
            self.match(PowerFxAlphaParser.STRING)
            self.state = 70
            self.match(PowerFxAlphaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(PowerFxAlphaParser.DEFINE, 0)

        def functionIdentifier(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.FunctionIdentifierContext,0)


        def LPAREN(self):
            return self.getToken(PowerFxAlphaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PowerFxAlphaParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(PowerFxAlphaParser.LBRACE, 0)

        def functionBody(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.FunctionBodyContext,0)


        def RBRACE(self):
            return self.getToken(PowerFxAlphaParser.RBRACE, 0)

        def functionArguments(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.FunctionArgumentsContext,0)


        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)




    def functionDefinition(self):

        localctx = PowerFxAlphaParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(PowerFxAlphaParser.DEFINE)
            self.state = 73
            self.functionIdentifier()
            self.state = 74
            self.match(PowerFxAlphaParser.LPAREN)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17042430230528) != 0):
                self.state = 75
                self.functionArguments()


            self.state = 78
            self.match(PowerFxAlphaParser.RPAREN)
            self.state = 79
            self.match(PowerFxAlphaParser.LBRACE)
            self.state = 80
            self.functionBody()
            self.state = 81
            self.match(PowerFxAlphaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxAlphaParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(PowerFxAlphaParser.ArgumentContext,i)


        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxAlphaParser.LiteralContext)
            else:
                return self.getTypedRuleContext(PowerFxAlphaParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PowerFxAlphaParser.COMMA)
            else:
                return self.getToken(PowerFxAlphaParser.COMMA, i)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_functionArguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionArguments" ):
                listener.enterFunctionArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionArguments" ):
                listener.exitFunctionArguments(self)




    def functionArguments(self):

        localctx = PowerFxAlphaParser.FunctionArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionArguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [43]:
                self.state = 83
                self.argument()
                pass
            elif token in [39, 40, 41, 42]:
                self.state = 84
                self.literal()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 87
                self.match(PowerFxAlphaParser.COMMA)
                self.state = 90
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [43]:
                    self.state = 88
                    self.argument()
                    pass
                elif token in [39, 40, 41, 42]:
                    self.state = 89
                    self.literal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PowerFxAlphaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)




    def argument(self):

        localctx = PowerFxAlphaParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(PowerFxAlphaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionElements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxAlphaParser.ExpressionElementsContext)
            else:
                return self.getTypedRuleContext(PowerFxAlphaParser.ExpressionElementsContext,i)


        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_functionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionBody" ):
                listener.enterFunctionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionBody" ):
                listener.exitFunctionBody(self)




    def functionBody(self):

        localctx = PowerFxAlphaParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 52291243606016) != 0):
                self.state = 99
                self.expressionElements()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionElementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(PowerFxAlphaParser.SEMI, 0)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_expressionElements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionElements" ):
                listener.enterExpressionElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionElements" ):
                listener.exitExpressionElements(self)




    def expressionElements(self):

        localctx = PowerFxAlphaParser.ExpressionElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expressionElements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.expression(0)
            self.state = 106
            self.match(PowerFxAlphaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionIdentifier(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.FunctionIdentifierContext,0)


        def LPAREN(self):
            return self.getToken(PowerFxAlphaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PowerFxAlphaParser.RPAREN, 0)

        def functionArguments(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.FunctionArgumentsContext,0)


        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)




    def functionCall(self):

        localctx = PowerFxAlphaParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.functionIdentifier()
            self.state = 109
            self.match(PowerFxAlphaParser.LPAREN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 17042430230528) != 0):
                self.state = 110
                self.functionArguments()


            self.state = 113
            self.match(PowerFxAlphaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PowerFxAlphaParser.IDENTIFIER)
            else:
                return self.getToken(PowerFxAlphaParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(PowerFxAlphaParser.DOT)
            else:
                return self.getToken(PowerFxAlphaParser.DOT, i)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_functionIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionIdentifier" ):
                listener.enterFunctionIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionIdentifier" ):
                listener.exitFunctionIdentifier(self)




    def functionIdentifier(self):

        localctx = PowerFxAlphaParser.FunctionIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionIdentifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(PowerFxAlphaParser.IDENTIFIER)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 116
                self.match(PowerFxAlphaParser.DOT)
                self.state = 117
                self.match(PowerFxAlphaParser.IDENTIFIER)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numberLiteral(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.NumberLiteralContext,0)


        def textLiteral(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.TextLiteralContext,0)


        def logicalLiteral(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.LogicalLiteralContext,0)


        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = PowerFxAlphaParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_literal)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.numberLiteral()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.textLiteral()
                pass
            elif token in [39, 40]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.logicalLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(PowerFxAlphaParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(PowerFxAlphaParser.FALSE, 0)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_logicalLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalLiteral" ):
                listener.enterLogicalLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalLiteral" ):
                listener.exitLogicalLiteral(self)




    def logicalLiteral(self):

        localctx = PowerFxAlphaParser.LogicalLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_logicalLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not(_la==39 or _la==40):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(PowerFxAlphaParser.NUMBER, 0)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_numberLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberLiteral" ):
                listener.enterNumberLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberLiteral" ):
                listener.exitNumberLiteral(self)




    def numberLiteral(self):

        localctx = PowerFxAlphaParser.NumberLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_numberLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(PowerFxAlphaParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(PowerFxAlphaParser.STRING, 0)

        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_textLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextLiteral" ):
                listener.enterTextLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextLiteral" ):
                listener.exitTextLiteral(self)




    def textLiteral(self):

        localctx = PowerFxAlphaParser.TextLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_textLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(PowerFxAlphaParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.LiteralContext,0)


        def reference(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.ReferenceContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.FunctionCallContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.AssignmentContext,0)


        def LPAREN(self):
            return self.getToken(PowerFxAlphaParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PowerFxAlphaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PowerFxAlphaParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(PowerFxAlphaParser.RPAREN, 0)

        def binaryOperator(self):
            return self.getTypedRuleContext(PowerFxAlphaParser.BinaryOperatorContext,0)


        def getRuleIndex(self):
            return PowerFxAlphaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PowerFxAlphaParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 135
                self.literal()
                pass

            elif la_ == 2:
                self.state = 136
                self.reference()
                pass

            elif la_ == 3:
                self.state = 137
                self.functionCall()
                pass

            elif la_ == 4:
                self.state = 138
                self.assignment()
                pass

            elif la_ == 5:
                self.state = 139
                self.match(PowerFxAlphaParser.LPAREN)
                self.state = 140
                self.expression(0)
                self.state = 141
                self.match(PowerFxAlphaParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 151
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PowerFxAlphaParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 145
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 146
                    self.binaryOperator()
                    self.state = 147
                    self.expression(2) 
                self.state = 153
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
